updated location div

--- a/Frontend Project/index.html
+++ b/Frontend Project/index.html
@@ -22,24 +22,18 @@
       </div>
 
       <section class="bus-routes">
-        <div class="location">
+         <div class="location">
           <div class="content">
             <img class="timebutton" src="images/20min.jpg" alt="twenty minutes">
-          </div>
-          <div>
             <h1>60</h1>
-          </div>
-          <div class="fa fa-chevron-right fa-2x">
-          </div>
-          <div>
+            <div class="fa fa-chevron-right fa-2x">
+            </div>
             <h1><mark>Eastbound</mark></h1>
-          </div>
-          <div>
             <h3>Randolph/HarborDr</h3>
           </div>
-          <div class="arrow">
+          <!--<div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
-          </div>
+          </div>-->
           </div>
 
 
